--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,28 @@ h1 {
   font-weight: normal;
 }
 
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+p {
+  font-size: 21px;
+  color: Gray;
+}
+
 a {
   color: Aquamarine;
   font-size: 16px;
+}
+
+.link {
+  margin: 20px 0;
+}
+
+#footer {
+  text-align: right;
+  color: Gray;
+  font-size: 20px;
+  margin: 30px 15px 0 0;
 }
